--- a/UI/InnovaStay.WebUI/Areas/Admin/Views/_AdminLayout/ScriptsPartial.cshtml
+++ b/UI/InnovaStay.WebUI/Areas/Admin/Views/_AdminLayout/ScriptsPartial.cshtml
@@ -1,8 +1,14 @@
-﻿<!--**********************************
-    Scripts
-***********************************-->
+﻿
+
+
 <script src="~/adminweb/plugins/common/common.min.js"></script>
 <script src="~/adminweb/js/custom.min.js"></script>
 <script src="~/adminweb/js/settings.js"></script>
 <script src="~/adminweb/js/gleek.js"></script>
 <script src="~/adminweb/js/styleSwitcher.js"></script>
+
+
+
+<!-- Toastr -->
+<script src="~/adminweb/plugins/toastr/js/toastr.min.js"></script>
+<script src="~/adminweb/plugins/toastr/js/toastr.init.js"></script>
