--- a/UI/InnovaStay.WebUI/Areas/Admin/Views/_AdminLayout/SidebarPartial.cshtml
+++ b/UI/InnovaStay.WebUI/Areas/Admin/Views/_AdminLayout/SidebarPartial.cshtml
@@ -5,9 +5,38 @@
  
             <li>
                 <a href="/Admin" aria-expanded="false">
-                    <i class="icon-badge menu-icon"></i><span class="nav-text">Widget</span>
+                    <i class="fa fa-home menu-icon"></i><span class="nav-text">Admin</span>
+                </a>
+            </li> 
+            <li>
+                <a href="/Admin/Staffs" aria-expanded="false">
+                    <i class="fa fa-users menu-icon"></i><span class="nav-text">Personel</span>
                 </a>
             </li>
+            
+            <li>
+                <a href="/Admin/Rooms" aria-expanded="false">
+                    <i class="fa fa-bed menu-icon"></i><span class="nav-text">Oda</span>
+                </a>
+            </li>
+            
+            <li>
+                <a href="/Admin/Services" aria-expanded="false">
+                    <i class="fa fa-concierge-bell menu-icon"></i><span class="nav-text">Hizmet</span>
+                </a>
+            </li>
+            
+            <li>
+                <a href="/Admin/Subscribes" aria-expanded="false">
+                    <i class="fa fa-bell menu-icon"></i><span class="nav-text">Abone</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Admin/Testimonials" aria-expanded="false">
+                    <i class="fa fa-quote-left menu-icon"></i><span class="nav-text">Referans</span>
+                </a>
+            </li>
+
             
         </ul>
     </div>
