--- a/UI/InnovaStay.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/UI/InnovaStay.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using InnovaStay.WebUI
 @using InnovaStay.WebUI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using InnovaStay.WebUI.Models.Staff
+
