--- a/UI/InnovaStay.WebUI/Areas/Admin/Views/Staffs/Index.cshtml
+++ b/UI/InnovaStay.WebUI/Areas/Admin/Views/Staffs/Index.cshtml
@@ -107,7 +107,7 @@
                     <td>@item.Title</td>
                     <td>
                         <div class="d-flex ">
-                            <a href="#" data-toggle="tooltip" data-placement="top" title="Sil">
+                            <a href="/Admin/Staffs/Update/@item.Id" data-toggle="tooltip" data-placement="top" title="Gümcelle">
                                 <img style="height: 30px;" class="img-fluid" src="~/adminweb/images/icon/edit.png" />
                             </a>
                             <a class="ml-3 sweet-delete" data-record-id="@item.Id" href="javascript:void(0)" data-toggle="tooltip" data-placement="top" title="Sil">
