--- a/UI/InnovaStay.WebUI/Areas/Admin/Views/Service/Index.cshtml
+++ b/UI/InnovaStay.WebUI/Areas/Admin/Views/Service/Index.cshtml
@@ -1,23 +1,19 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/_AdminLayout/Index.cshtml";
 }
-@model List<StaffVM>
 
 
+@model List<ServiceVM>
 
-
-@section Header {
-    @* <link href="~/adminweb/plugins/sweetalert2/dist/sweetalert2.min.css" rel="stylesheet" /> *@
-
-}
 
 @section Scripts {
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-     <script>
+    <script>
                  const swalWithBootstrapButtons = Swal.mixin({
           customClass: {
             confirmButton: "btn btn-success",
@@ -43,7 +39,7 @@
                 }).then(async (result) => {
                     if (result.isConfirmed) {
                         try {
-                            const response = await fetch(`/Admin/Staffs/Delete/${recordId}`, {
+                            const response = await fetch(`/Admin/Service/Delete/${recordId}`, {
                                 method: 'DELETE',
                                 headers: {
                                     'Content-Type': 'application/json'
@@ -70,8 +66,8 @@
         });
 
     </script>
- 
- 
+
+
 
 
 }
@@ -81,9 +77,9 @@
 
 
 <h4 class="card-title">Data Table</h4>
-<a href="/Admin/Staffs/Create" class="btn mb-3 btn-primary text-white">
+<a href="/Admin/Service/Create" class="btn mb-3 btn-primary text-white">
     <i class="fa fa-plus" aria-hidden="true"></i>
-    Yeni Personel Oluştur
+    Yeni Servis Oluştur
 </a>
 
 <div class="table-responsive">
@@ -91,9 +87,9 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Title</th>
-                <th>İşlemler</th>
+                <th>Başlık</th>
+                <th>Açıklama</th>
+                <th>Servis Icon</th>
             </tr>
         </thead>
         <tbody>
@@ -103,22 +99,22 @@
             {
                 <tr>
                     <td>@item.Id</td>
-                    <td>@item.Name</td>
                     <td>@item.Title</td>
+                    <td>@item.Description</td>
+                    <td>@item.ServiceIcon</td>
                     <td>
                         <div class="d-flex ">
-                            <a href="/Admin/Staffs/Update/@item.Id" data-toggle="tooltip" data-placement="top" title="Gümcelle">
+                            <a href="/Admin/Service/Update/@item.Id" data-toggle="tooltip" data-placement="top" title="Gümcelle">
                                 <img style="height: 30px;" class="img-fluid" src="~/adminweb/images/icon/edit.png" />
                             </a>
                             <a class="ml-3 sweet-delete" data-record-id="@item.Id" href="javascript:void(0)" data-toggle="tooltip" data-placement="top" title="Sil">
                                 <img style="height: 30px;" class="img-fluid" src="~/adminweb/images/icon/bin.png" />
                             </a>
-                            <a class="ml-3" href="/Admin/Staffs/Detail/@item.Id" data-toggle="tooltip" data-placement="top" title="Detay">
+                            <a class="ml-3" href="/Admin/Service/Detail/@item.Id" data-toggle="tooltip" data-placement="top" title="Detay">
                                 <img style="height: 30px;" class="img-fluid" src="~/adminweb/images/icon/file-1.png" />
                             </a>
                         </div>
                     </td>
-
 
 
                 </tr>
@@ -128,10 +124,9 @@
         <tfoot>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Title</th>
-                <th>İşlemler</th>
-
+                <th>Servis Icon</th>
+                <th>Başlık</th>
+                <th>Açıklama</th>
             </tr>
         </tfoot>
     </table>
