--- a/UI/InnovaStay.WebUI/Areas/Admin/Views/_AdminLayout/SidebarPartial.cshtml
+++ b/UI/InnovaStay.WebUI/Areas/Admin/Views/_AdminLayout/SidebarPartial.cshtml
@@ -15,24 +15,24 @@
             </li>
             
             <li>
-                <a href="/Admin/Rooms" aria-expanded="false">
+                <a href="/Admin/Room" aria-expanded="false">
                     <i class="fa fa-bed menu-icon"></i><span class="nav-text">Oda</span>
                 </a>
             </li>
             
             <li>
-                <a href="/Admin/Services" aria-expanded="false">
+                <a href="/Admin/Service" aria-expanded="false">
                     <i class="fa fa-concierge-bell menu-icon"></i><span class="nav-text">Hizmet</span>
                 </a>
             </li>
             
             <li>
-                <a href="/Admin/Subscribes" aria-expanded="false">
+                <a href="/Admin/Subscribe" aria-expanded="false">
                     <i class="fa fa-bell menu-icon"></i><span class="nav-text">Abone</span>
                 </a>
             </li>
             <li>
-                <a href="/Admin/Testimonials" aria-expanded="false">
+                <a href="/Admin/Testimonial" aria-expanded="false">
                     <i class="fa fa-quote-left menu-icon"></i><span class="nav-text">Referans</span>
                 </a>
             </li>
