--- a/UI/InnovaStay.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/UI/InnovaStay.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using InnovaStay.WebUI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using InnovaStay.WebUI.Models.Staff
+@using InnovaStay.WebUI.Models.Testimonial
+@using InnovaStay.WebUI.Models.Service
 
