--- a/UI/InnovaStay.WebUI/Views/Auth/Login.cshtml
+++ b/UI/InnovaStay.WebUI/Views/Auth/Login.cshtml
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Quixlab - Bootstrap Admin Dashboard Template by Themefisher.com</title>
+    <title>InnovaStay Kullanıcı Giriş Paneli</title>
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -51,7 +51,7 @@
                         <div class="card login-form mb-0">
                             <div class="card-body pt-5">
 
-                                <a class="text-center" href="/"> <h4>InnovaStay Kullanıcı Kayıt Paneli</h4></a>
+                                <a class="text-center" href="/"> <h4>InnovaStay Kullanıcı Giriş Paneli</h4></a>
 
                                 <form method="post" class="mt-5 mb-5 login-input">
                                     <div asp-validation-summary="ModelOnly" class="alert alert-warning">
