--- a/UI/InnovaStay.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/UI/InnovaStay.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using InnovaStay.WebUI.Models.Staff
 @using InnovaStay.WebUI.Models.Testimonial
 @using InnovaStay.WebUI.Models.Service
+@using InnovaStay.WebUI.Models.About
 
